Another approach to fix background on mobile

--- a/style.css
+++ b/style.css
@@ -21,10 +21,15 @@ body {
 }
 
 .bg {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background: url('https://static.pexels.com/photos/25316/pexels-photo-25316.jpg') no-repeat center center fixed;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  min-width: 100%;
+  min-height: 100%;
+  background: url('https://static.pexels.com/photos/25316/pexels-photo-25316.jpg') no-repeat fixed;
+  -webkit-background-position: center center;
+  background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
